final draft - almost an exact match of DRIP
Almost exact match of the current (legacy) production DRIP adapters' xmljson has been achieved. Only missing:
1. wo-cache call is not emulated/done, so fields added by wo-cache are not tested for. A final implementation would have to add this step
2. Whitespaces are almost exact match, but there might be an extra or missing whitespace, especially adjacent to a newline \n, e.g. ' \n' instead of '\n' or vice et versa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+# ----------------------------------------------------
+# config routes unmarshall from xml/marshall to json
+# ----------------------------------------------------
+
+# config marshall
 quarkus.jackson.write-dates-as-timestamps=true
+
+# ----------------
+# config wo-cache
+# ----------------
+
+# wo-cache API config
+quarkus.rest-client.wo-cache-api.url=http://wocache/
+quarkus.rest-client.wo-cache-api.scope=jakarta.inject.Singleton
+wocache_user=REPLACE_ME
+wocache_pw=REPLACE_ME
+woccAddress=https://wo-cache.private.test.gcp.dr.dk
+woccApiKey=REPLACE_ME
+
+# debug config
+quarkus.rest-client.alpn=true
+# request-response or all
+quarkus.rest-client.logging.scope=request-response
+quarkus.rest-client.logging.body-limit=1024
+quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
